some test cases showing error